name:                soundwave
version:             0.1.0.0
synopsis:            Pedagogical Haskell port of Avi Bryant's Vignette
-- description:         
homepage:            http://github.com/mrb/soundwave
license:             MIT
license-file:        LICENSE
author:              mrb
maintainer:          michaelrbernstein@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable soundwave
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    BangPatterns, DeriveDataTypeable, FlexibleInstances, MultiParamTypeClasses
  build-depends:       base >=4.6 && <4.7, network >=2.6 && <2.7, containers >=0.5 && <0.6, mtl >=2.2 && <2.3, bytestring >=0.10 && <0.11, binary >=0.5 && <0.6, regex-tdfa >=1.2 && <1.3, protocol-buffers >=2.0 && <2.1, bytestring-trie >=0.2 && <0.3, protocol-buffers-descriptor >=2.0 && <2.1
  -- hs-source-dirs:      
  default-language:    Haskell2010
